--- a/react/records/adm/src/main.scss
+++ b/react/records/adm/src/main.scss
@@ -15,6 +15,7 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: space-evenly;
+		flex-wrap: wrap;
 	}
 
 	.records-table {
@@ -103,4 +104,20 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+
+.easqy-record-users-table {
+	width: 100%;
+
+	tr:nth-child(2n + 1) {
+		background-color: #eaeaea;
+	}
+
+	td {
+		padding: 0.4em;
+	}
+}
+
+#easqy-current-competitions {
+	margin-bottom: 2em;
 }
