--- a/react/records/pub/src/main.scss
+++ b/react/records/pub/src/main.scss
@@ -91,15 +91,18 @@
 							font-size: 1em;
 						}
 
-						.nom {
+						.athletes {
 							padding: 0.75em;
-							font-size: 1.25em;
-							font-weight: bold;
-							white-space: nowrap;
 
-							span {
-								font-size: 0.75em;
-								padding-left: 0.5em;
+							.nom {
+								font-size: 1.25em;
+								font-weight: bold;
+								white-space: nowrap;
+
+								span {
+									font-size: 0.75em;
+									padding-left: 0.5em;
+								}
 							}
 						}
 						.perf {
